adjust z-index of site elements to prevent loading screen from cutting into sidenav

--- a/src/components/Dashboard/styles.scss
+++ b/src/components/Dashboard/styles.scss
@@ -6,5 +6,5 @@
   width: 100%;
   height: 100%;
   background-color: white;
-  z-index: 3;
+  z-index: 2;
 }
